encode data table as number[][]

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -3766,6 +3766,105 @@
     ").index)\n",
     "print(species)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[66.66666666666666, 0.0, 33.33333333333333, 0.0, 0.0, 0.0],\n",
+       " [10.0, 30.0, 30.0, 30.0, 0.0, 0.0],\n",
+       " [8.695652173913043,\n",
+       "  26.08695652173913,\n",
+       "  17.391304347826086,\n",
+       "  17.391304347826086,\n",
+       "  21.73913043478261,\n",
+       "  8.695652173913043],\n",
+       " [18.75, 6.25, 6.25, 12.5, 31.25, 25.0],\n",
+       " [0.0,\n",
+       "  18.181818181818183,\n",
+       "  36.36363636363637,\n",
+       "  27.27272727272727,\n",
+       "  18.181818181818183,\n",
+       "  0.0],\n",
+       " [16.666666666666664, 0.0, 0.0, 16.666666666666664, 50.0, 16.666666666666664],\n",
+       " [0.0,\n",
+       "  15.384615384615385,\n",
+       "  0.0,\n",
+       "  7.6923076923076925,\n",
+       "  38.46153846153847,\n",
+       "  38.46153846153847],\n",
+       " [0.0, 12.5, 18.75, 25.0, 25.0, 18.75],\n",
+       " [12.5, 0.0, 25.0, 25.0, 0.0, 37.5],\n",
+       " [0.0,\n",
+       "  11.76470588235294,\n",
+       "  0.0,\n",
+       "  17.647058823529413,\n",
+       "  17.647058823529413,\n",
+       "  52.94117647058824],\n",
+       " [5.555555555555555,\n",
+       "  5.555555555555555,\n",
+       "  11.11111111111111,\n",
+       "  22.22222222222222,\n",
+       "  33.33333333333333,\n",
+       "  22.22222222222222],\n",
+       " [0.0, 11.11111111111111, 0.0, 0.0, 33.33333333333333, 55.55555555555556],\n",
+       " [0.0, 10.0, 0.0, 20.0, 40.0, 30.0],\n",
+       " [0.0,\n",
+       "  7.6923076923076925,\n",
+       "  0.0,\n",
+       "  30.76923076923077,\n",
+       "  30.76923076923077,\n",
+       "  30.76923076923077],\n",
+       " [0.0,\n",
+       "  6.666666666666667,\n",
+       "  6.666666666666667,\n",
+       "  6.666666666666667,\n",
+       "  26.666666666666668,\n",
+       "  53.333333333333336],\n",
+       " [0.0,\n",
+       "  5.555555555555555,\n",
+       "  5.555555555555555,\n",
+       "  5.555555555555555,\n",
+       "  44.44444444444444,\n",
+       "  38.88888888888889],\n",
+       " [5.0, 0.0, 10.0, 15.0, 50.0, 20.0],\n",
+       " [0.0, 0.0, 37.5, 12.5, 25.0, 25.0],\n",
+       " [0.0, 0.0, 11.11111111111111, 33.33333333333333, 55.55555555555556, 0.0],\n",
+       " [0.0,\n",
+       "  0.0,\n",
+       "  9.090909090909092,\n",
+       "  18.181818181818183,\n",
+       "  27.27272727272727,\n",
+       "  45.45454545454545],\n",
+       " [0.0, 0.0, 0.0, 28.57142857142857, 28.57142857142857, 42.857142857142854],\n",
+       " [0.0, 0.0, 0.0, 28.57142857142857, 14.285714285714285, 57.14285714285714],\n",
+       " [0.0, 0.0, 0.0, 20.0, 20.0, 60.0],\n",
+       " [0.0, 0.0, 0.0, 14.285714285714285, 14.285714285714285, 71.42857142857143],\n",
+       " [0.0, 0.0, 0.0, 12.5, 50.0, 37.5],\n",
+       " [0.0, 0.0, 0.0, 7.142857142857142, 7.142857142857142, 85.71428571428571],\n",
+       " [0.0, 0.0, 0.0, 6.666666666666667, 26.666666666666668, 66.66666666666666],\n",
+       " [0.0, 0.0, 0.0, 0.0, 75.0, 25.0],\n",
+       " [0.0, 0.0, 0.0, 0.0, 44.44444444444444, 55.55555555555556],\n",
+       " [0.0, 0.0, 0.0, 0.0, 42.857142857142854, 57.14285714285714],\n",
+       " [0.0, 0.0, 0.0, 0.0, 37.5, 62.5],\n",
+       " [0.0, 0.0, 0.0, 0.0, 33.33333333333333, 66.66666666666666],\n",
+       " [0.0, 0.0, 0.0, 0.0, 28.57142857142857, 71.42857142857143],\n",
+       " [0.0, 0.0, 0.0, 0.0, 23.076923076923077, 76.92307692307693],\n",
+       " [0.0, 0.0, 0.0, 0.0, 11.11111111111111, 88.88888888888889]]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[e[1], e[2], e[3], e[4], e[5], e[6]] for e in d]"
+   ]
   }
  ],
  "metadata": {
