--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -3865,6 +3865,89 @@
    "source": [
     "[[e[1], e[2], e[3], e[4], e[5], e[6]] for e in d]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.54"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(1.5362351235, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[66.67, 0.0, 33.33, 0.0, 0.0, 0.0],\n",
+       " [10.0, 30.0, 30.0, 30.0, 0.0, 0.0],\n",
+       " [8.7, 26.09, 17.39, 17.39, 21.74, 8.7],\n",
+       " [18.75, 6.25, 6.25, 12.5, 31.25, 25.0],\n",
+       " [0.0, 18.18, 36.36, 27.27, 18.18, 0.0],\n",
+       " [16.67, 0.0, 0.0, 16.67, 50.0, 16.67],\n",
+       " [0.0, 15.38, 0.0, 7.69, 38.46, 38.46],\n",
+       " [0.0, 12.5, 18.75, 25.0, 25.0, 18.75],\n",
+       " [12.5, 0.0, 25.0, 25.0, 0.0, 37.5],\n",
+       " [0.0, 11.76, 0.0, 17.65, 17.65, 52.94],\n",
+       " [5.56, 5.56, 11.11, 22.22, 33.33, 22.22],\n",
+       " [0.0, 11.11, 0.0, 0.0, 33.33, 55.56],\n",
+       " [0.0, 10.0, 0.0, 20.0, 40.0, 30.0],\n",
+       " [0.0, 7.69, 0.0, 30.77, 30.77, 30.77],\n",
+       " [0.0, 6.67, 6.67, 6.67, 26.67, 53.33],\n",
+       " [0.0, 5.56, 5.56, 5.56, 44.44, 38.89],\n",
+       " [5.0, 0.0, 10.0, 15.0, 50.0, 20.0],\n",
+       " [0.0, 0.0, 37.5, 12.5, 25.0, 25.0],\n",
+       " [0.0, 0.0, 11.11, 33.33, 55.56, 0.0],\n",
+       " [0.0, 0.0, 9.09, 18.18, 27.27, 45.45],\n",
+       " [0.0, 0.0, 0.0, 28.57, 28.57, 42.86],\n",
+       " [0.0, 0.0, 0.0, 28.57, 14.29, 57.14],\n",
+       " [0.0, 0.0, 0.0, 20.0, 20.0, 60.0],\n",
+       " [0.0, 0.0, 0.0, 14.29, 14.29, 71.43],\n",
+       " [0.0, 0.0, 0.0, 12.5, 50.0, 37.5],\n",
+       " [0.0, 0.0, 0.0, 7.14, 7.14, 85.71],\n",
+       " [0.0, 0.0, 0.0, 6.67, 26.67, 66.67],\n",
+       " [0.0, 0.0, 0.0, 0.0, 75.0, 25.0],\n",
+       " [0.0, 0.0, 0.0, 0.0, 44.44, 55.56],\n",
+       " [0.0, 0.0, 0.0, 0.0, 42.86, 57.14],\n",
+       " [0.0, 0.0, 0.0, 0.0, 37.5, 62.5],\n",
+       " [0.0, 0.0, 0.0, 0.0, 33.33, 66.67],\n",
+       " [0.0, 0.0, 0.0, 0.0, 28.57, 71.43],\n",
+       " [0.0, 0.0, 0.0, 0.0, 23.08, 76.92],\n",
+       " [0.0, 0.0, 0.0, 0.0, 11.11, 88.89]]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[[round(e[1], 2), round(e[2], 2), round(e[3], 2), round(e[4], 2), round(e[5], 2), round(e[6], 2)] for e in d]"
+   ]
   }
  ],
  "metadata": {
