--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        " ('성별', '취미')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +634,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +795,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1006,7 @@
        "4        [심플]  [빨강색, 파랑색]  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1092,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1298,7 +1298,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1363,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1506,7 +1506,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1561,7 +1561,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1600,7 @@
        "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
        "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1699,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1715,7 +1715,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1727,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1745,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
        "고양이   NaN  NaN  NaN  NaN  NaN  NaN"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1848,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1858,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2314,7 +2314,7 @@
        "호랑이   0  0  0  2   2   3      7"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2325,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2762,7 +2762,7 @@
        "호랑이    0.000000   0.000000   0.000000  28.571429  28.571429  42.857143      7"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2773,7 +2773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -3200,7 +3200,7 @@
        "고릴라    0.000000   0.000000   0.000000   0.000000  11.111111  88.888889      9"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3211,7 +3211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -3270,7 +3270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -3697,7 +3697,7 @@
        "고릴라    0.000000   0.000000   0.000000   0.000000  11.111111  88.888889      9"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3715,7 +3715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3728,7 +3728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -3737,7 +3737,7 @@
        "[1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3749,7 +3749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -3769,7 +3769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -3857,7 +3857,7 @@
        " [0.0, 0.0, 0.0, 0.0, 11.11111111111111, 88.88888888888889]]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3868,7 +3868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3877,7 +3877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -3886,7 +3886,7 @@
        "1.54"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3897,7 +3897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -3940,13 +3940,29 @@
        " [0.0, 0.0, 0.0, 0.0, 11.11, 88.89]]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "[[round(e[1], 2), round(e[2], 2), round(e[3], 2), round(e[4], 2), round(e[5], 2), round(e[6], 2)] for e in d]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "안지우님이 가로세로를 바꿔달라고 하셨습니다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from operator import itemgetter"
    ]
   }
  ],
