da: export as transposed table

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -3964,6 +3964,433 @@
    "source": [
     "from operator import itemgetter"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[66.66666666666666,\n",
+       " 10.0,\n",
+       " 8.695652173913043,\n",
+       " 18.75,\n",
+       " 0.0,\n",
+       " 16.666666666666664,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 12.5,\n",
+       " 0.0,\n",
+       " 5.555555555555555,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 5.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 30.0,\n",
+       " 26.08695652173913,\n",
+       " 6.25,\n",
+       " 18.181818181818183,\n",
+       " 0.0,\n",
+       " 15.384615384615385,\n",
+       " 12.5,\n",
+       " 0.0,\n",
+       " 11.76470588235294,\n",
+       " 5.555555555555555,\n",
+       " 11.11111111111111,\n",
+       " 10.0,\n",
+       " 7.6923076923076925,\n",
+       " 6.666666666666667,\n",
+       " 5.555555555555555,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 33.33333333333333,\n",
+       " 30.0,\n",
+       " 17.391304347826086,\n",
+       " 6.25,\n",
+       " 36.36363636363637,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 18.75,\n",
+       " 25.0,\n",
+       " 0.0,\n",
+       " 11.11111111111111,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 6.666666666666667,\n",
+       " 5.555555555555555,\n",
+       " 10.0,\n",
+       " 37.5,\n",
+       " 11.11111111111111,\n",
+       " 9.090909090909092,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 30.0,\n",
+       " 17.391304347826086,\n",
+       " 12.5,\n",
+       " 27.27272727272727,\n",
+       " 16.666666666666664,\n",
+       " 7.6923076923076925,\n",
+       " 25.0,\n",
+       " 25.0,\n",
+       " 17.647058823529413,\n",
+       " 22.22222222222222,\n",
+       " 0.0,\n",
+       " 20.0,\n",
+       " 30.76923076923077,\n",
+       " 6.666666666666667,\n",
+       " 5.555555555555555,\n",
+       " 15.0,\n",
+       " 12.5,\n",
+       " 33.33333333333333,\n",
+       " 18.181818181818183,\n",
+       " 28.57142857142857,\n",
+       " 28.57142857142857,\n",
+       " 20.0,\n",
+       " 14.285714285714285,\n",
+       " 12.5,\n",
+       " 7.142857142857142,\n",
+       " 6.666666666666667,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 21.73913043478261,\n",
+       " 31.25,\n",
+       " 18.181818181818183,\n",
+       " 50.0,\n",
+       " 38.46153846153847,\n",
+       " 25.0,\n",
+       " 0.0,\n",
+       " 17.647058823529413,\n",
+       " 33.33333333333333,\n",
+       " 33.33333333333333,\n",
+       " 40.0,\n",
+       " 30.76923076923077,\n",
+       " 26.666666666666668,\n",
+       " 44.44444444444444,\n",
+       " 50.0,\n",
+       " 25.0,\n",
+       " 55.55555555555556,\n",
+       " 27.27272727272727,\n",
+       " 28.57142857142857,\n",
+       " 14.285714285714285,\n",
+       " 20.0,\n",
+       " 14.285714285714285,\n",
+       " 50.0,\n",
+       " 7.142857142857142,\n",
+       " 26.666666666666668,\n",
+       " 75.0,\n",
+       " 44.44444444444444,\n",
+       " 42.857142857142854,\n",
+       " 37.5,\n",
+       " 33.33333333333333,\n",
+       " 28.57142857142857,\n",
+       " 23.076923076923077,\n",
+       " 11.11111111111111,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 8.695652173913043,\n",
+       " 25.0,\n",
+       " 0.0,\n",
+       " 16.666666666666664,\n",
+       " 38.46153846153847,\n",
+       " 18.75,\n",
+       " 37.5,\n",
+       " 52.94117647058824,\n",
+       " 22.22222222222222,\n",
+       " 55.55555555555556,\n",
+       " 30.0,\n",
+       " 30.76923076923077,\n",
+       " 53.333333333333336,\n",
+       " 38.88888888888889,\n",
+       " 20.0,\n",
+       " 25.0,\n",
+       " 0.0,\n",
+       " 45.45454545454545,\n",
+       " 42.857142857142854,\n",
+       " 57.14285714285714,\n",
+       " 60.0,\n",
+       " 71.42857142857143,\n",
+       " 37.5,\n",
+       " 85.71428571428571,\n",
+       " 66.66666666666666,\n",
+       " 25.0,\n",
+       " 55.55555555555556,\n",
+       " 57.14285714285714,\n",
+       " 62.5,\n",
+       " 66.66666666666666,\n",
+       " 71.42857142857143,\n",
+       " 76.92307692307693,\n",
+       " 88.88888888888889]"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[v[i] for i in range(1, 7) for v in d]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{1: 66.66666666666666,\n",
+       "  2: 0.0,\n",
+       "  3: 33.33333333333333,\n",
+       "  4: 0.0,\n",
+       "  5: 0.0,\n",
+       "  6: 0.0,\n",
+       "  'count': 3},\n",
+       " {1: 10.0, 2: 30.0, 3: 30.0, 4: 30.0, 5: 0.0, 6: 0.0, 'count': 10},\n",
+       " {1: 8.695652173913043,\n",
+       "  2: 26.08695652173913,\n",
+       "  3: 17.391304347826086,\n",
+       "  4: 17.391304347826086,\n",
+       "  5: 21.73913043478261,\n",
+       "  6: 8.695652173913043,\n",
+       "  'count': 23},\n",
+       " {1: 18.75, 2: 6.25, 3: 6.25, 4: 12.5, 5: 31.25, 6: 25.0, 'count': 16},\n",
+       " {1: 0.0,\n",
+       "  2: 18.181818181818183,\n",
+       "  3: 36.36363636363637,\n",
+       "  4: 27.27272727272727,\n",
+       "  5: 18.181818181818183,\n",
+       "  6: 0.0,\n",
+       "  'count': 11},\n",
+       " {1: 16.666666666666664,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 16.666666666666664,\n",
+       "  5: 50.0,\n",
+       "  6: 16.666666666666664,\n",
+       "  'count': 6},\n",
+       " {1: 0.0,\n",
+       "  2: 15.384615384615385,\n",
+       "  3: 0.0,\n",
+       "  4: 7.6923076923076925,\n",
+       "  5: 38.46153846153847,\n",
+       "  6: 38.46153846153847,\n",
+       "  'count': 13},\n",
+       " {1: 0.0, 2: 12.5, 3: 18.75, 4: 25.0, 5: 25.0, 6: 18.75, 'count': 16},\n",
+       " {1: 12.5, 2: 0.0, 3: 25.0, 4: 25.0, 5: 0.0, 6: 37.5, 'count': 8},\n",
+       " {1: 0.0,\n",
+       "  2: 11.76470588235294,\n",
+       "  3: 0.0,\n",
+       "  4: 17.647058823529413,\n",
+       "  5: 17.647058823529413,\n",
+       "  6: 52.94117647058824,\n",
+       "  'count': 17},\n",
+       " {1: 5.555555555555555,\n",
+       "  2: 5.555555555555555,\n",
+       "  3: 11.11111111111111,\n",
+       "  4: 22.22222222222222,\n",
+       "  5: 33.33333333333333,\n",
+       "  6: 22.22222222222222,\n",
+       "  'count': 18},\n",
+       " {1: 0.0,\n",
+       "  2: 11.11111111111111,\n",
+       "  3: 0.0,\n",
+       "  4: 0.0,\n",
+       "  5: 33.33333333333333,\n",
+       "  6: 55.55555555555556,\n",
+       "  'count': 9},\n",
+       " {1: 0.0, 2: 10.0, 3: 0.0, 4: 20.0, 5: 40.0, 6: 30.0, 'count': 10},\n",
+       " {1: 0.0,\n",
+       "  2: 7.6923076923076925,\n",
+       "  3: 0.0,\n",
+       "  4: 30.76923076923077,\n",
+       "  5: 30.76923076923077,\n",
+       "  6: 30.76923076923077,\n",
+       "  'count': 13},\n",
+       " {1: 0.0,\n",
+       "  2: 6.666666666666667,\n",
+       "  3: 6.666666666666667,\n",
+       "  4: 6.666666666666667,\n",
+       "  5: 26.666666666666668,\n",
+       "  6: 53.333333333333336,\n",
+       "  'count': 15},\n",
+       " {1: 0.0,\n",
+       "  2: 5.555555555555555,\n",
+       "  3: 5.555555555555555,\n",
+       "  4: 5.555555555555555,\n",
+       "  5: 44.44444444444444,\n",
+       "  6: 38.88888888888889,\n",
+       "  'count': 18},\n",
+       " {1: 5.0, 2: 0.0, 3: 10.0, 4: 15.0, 5: 50.0, 6: 20.0, 'count': 20},\n",
+       " {1: 0.0, 2: 0.0, 3: 37.5, 4: 12.5, 5: 25.0, 6: 25.0, 'count': 8},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 11.11111111111111,\n",
+       "  4: 33.33333333333333,\n",
+       "  5: 55.55555555555556,\n",
+       "  6: 0.0,\n",
+       "  'count': 9},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 9.090909090909092,\n",
+       "  4: 18.181818181818183,\n",
+       "  5: 27.27272727272727,\n",
+       "  6: 45.45454545454545,\n",
+       "  'count': 11},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 28.57142857142857,\n",
+       "  5: 28.57142857142857,\n",
+       "  6: 42.857142857142854,\n",
+       "  'count': 7},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 28.57142857142857,\n",
+       "  5: 14.285714285714285,\n",
+       "  6: 57.14285714285714,\n",
+       "  'count': 7},\n",
+       " {1: 0.0, 2: 0.0, 3: 0.0, 4: 20.0, 5: 20.0, 6: 60.0, 'count': 15},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 14.285714285714285,\n",
+       "  5: 14.285714285714285,\n",
+       "  6: 71.42857142857143,\n",
+       "  'count': 7},\n",
+       " {1: 0.0, 2: 0.0, 3: 0.0, 4: 12.5, 5: 50.0, 6: 37.5, 'count': 8},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 7.142857142857142,\n",
+       "  5: 7.142857142857142,\n",
+       "  6: 85.71428571428571,\n",
+       "  'count': 14},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 6.666666666666667,\n",
+       "  5: 26.666666666666668,\n",
+       "  6: 66.66666666666666,\n",
+       "  'count': 15},\n",
+       " {1: 0.0, 2: 0.0, 3: 0.0, 4: 0.0, 5: 75.0, 6: 25.0, 'count': 4},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 0.0,\n",
+       "  5: 44.44444444444444,\n",
+       "  6: 55.55555555555556,\n",
+       "  'count': 9},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 0.0,\n",
+       "  5: 42.857142857142854,\n",
+       "  6: 57.14285714285714,\n",
+       "  'count': 7},\n",
+       " {1: 0.0, 2: 0.0, 3: 0.0, 4: 0.0, 5: 37.5, 6: 62.5, 'count': 8},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 0.0,\n",
+       "  5: 33.33333333333333,\n",
+       "  6: 66.66666666666666,\n",
+       "  'count': 6},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 0.0,\n",
+       "  5: 28.57142857142857,\n",
+       "  6: 71.42857142857143,\n",
+       "  'count': 7},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 0.0,\n",
+       "  5: 23.076923076923077,\n",
+       "  6: 76.92307692307693,\n",
+       "  'count': 13},\n",
+       " {1: 0.0,\n",
+       "  2: 0.0,\n",
+       "  3: 0.0,\n",
+       "  4: 0.0,\n",
+       "  5: 11.11111111111111,\n",
+       "  6: 88.88888888888889,\n",
+       "  'count': 9}]"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d\n"
+   ]
   }
  ],
  "metadata": {
