--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -3967,231 +3967,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[66.66666666666666,\n",
-       " 10.0,\n",
-       " 8.695652173913043,\n",
-       " 18.75,\n",
-       " 0.0,\n",
-       " 16.666666666666664,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 12.5,\n",
-       " 0.0,\n",
-       " 5.555555555555555,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 5.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 30.0,\n",
-       " 26.08695652173913,\n",
-       " 6.25,\n",
-       " 18.181818181818183,\n",
-       " 0.0,\n",
-       " 15.384615384615385,\n",
-       " 12.5,\n",
-       " 0.0,\n",
-       " 11.76470588235294,\n",
-       " 5.555555555555555,\n",
-       " 11.11111111111111,\n",
-       " 10.0,\n",
-       " 7.6923076923076925,\n",
-       " 6.666666666666667,\n",
-       " 5.555555555555555,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 33.33333333333333,\n",
-       " 30.0,\n",
-       " 17.391304347826086,\n",
-       " 6.25,\n",
-       " 36.36363636363637,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 18.75,\n",
-       " 25.0,\n",
-       " 0.0,\n",
-       " 11.11111111111111,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 6.666666666666667,\n",
-       " 5.555555555555555,\n",
-       " 10.0,\n",
-       " 37.5,\n",
-       " 11.11111111111111,\n",
-       " 9.090909090909092,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 30.0,\n",
-       " 17.391304347826086,\n",
-       " 12.5,\n",
-       " 27.27272727272727,\n",
-       " 16.666666666666664,\n",
-       " 7.6923076923076925,\n",
-       " 25.0,\n",
-       " 25.0,\n",
-       " 17.647058823529413,\n",
-       " 22.22222222222222,\n",
-       " 0.0,\n",
-       " 20.0,\n",
-       " 30.76923076923077,\n",
-       " 6.666666666666667,\n",
-       " 5.555555555555555,\n",
-       " 15.0,\n",
-       " 12.5,\n",
-       " 33.33333333333333,\n",
-       " 18.181818181818183,\n",
-       " 28.57142857142857,\n",
-       " 28.57142857142857,\n",
-       " 20.0,\n",
-       " 14.285714285714285,\n",
-       " 12.5,\n",
-       " 7.142857142857142,\n",
-       " 6.666666666666667,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 21.73913043478261,\n",
-       " 31.25,\n",
-       " 18.181818181818183,\n",
-       " 50.0,\n",
-       " 38.46153846153847,\n",
-       " 25.0,\n",
-       " 0.0,\n",
-       " 17.647058823529413,\n",
-       " 33.33333333333333,\n",
-       " 33.33333333333333,\n",
-       " 40.0,\n",
-       " 30.76923076923077,\n",
-       " 26.666666666666668,\n",
-       " 44.44444444444444,\n",
-       " 50.0,\n",
-       " 25.0,\n",
-       " 55.55555555555556,\n",
-       " 27.27272727272727,\n",
-       " 28.57142857142857,\n",
-       " 14.285714285714285,\n",
-       " 20.0,\n",
-       " 14.285714285714285,\n",
-       " 50.0,\n",
-       " 7.142857142857142,\n",
-       " 26.666666666666668,\n",
-       " 75.0,\n",
-       " 44.44444444444444,\n",
-       " 42.857142857142854,\n",
-       " 37.5,\n",
-       " 33.33333333333333,\n",
-       " 28.57142857142857,\n",
-       " 23.076923076923077,\n",
-       " 11.11111111111111,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 8.695652173913043,\n",
-       " 25.0,\n",
-       " 0.0,\n",
-       " 16.666666666666664,\n",
-       " 38.46153846153847,\n",
-       " 18.75,\n",
-       " 37.5,\n",
-       " 52.94117647058824,\n",
-       " 22.22222222222222,\n",
-       " 55.55555555555556,\n",
-       " 30.0,\n",
-       " 30.76923076923077,\n",
-       " 53.333333333333336,\n",
-       " 38.88888888888889,\n",
-       " 20.0,\n",
-       " 25.0,\n",
-       " 0.0,\n",
-       " 45.45454545454545,\n",
-       " 42.857142857142854,\n",
-       " 57.14285714285714,\n",
-       " 60.0,\n",
-       " 71.42857142857143,\n",
-       " 37.5,\n",
-       " 85.71428571428571,\n",
-       " 66.66666666666666,\n",
-       " 25.0,\n",
-       " 55.55555555555556,\n",
-       " 57.14285714285714,\n",
-       " 62.5,\n",
-       " 66.66666666666666,\n",
-       " 71.42857142857143,\n",
-       " 76.92307692307693,\n",
-       " 88.88888888888889]"
+       "[[66.66666666666666,\n",
+       "  10.0,\n",
+       "  8.695652173913043,\n",
+       "  18.75,\n",
+       "  0.0,\n",
+       "  16.666666666666664,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  12.5,\n",
+       "  0.0,\n",
+       "  5.555555555555555,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  5.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0],\n",
+       " [0.0,\n",
+       "  30.0,\n",
+       "  26.08695652173913,\n",
+       "  6.25,\n",
+       "  18.181818181818183,\n",
+       "  0.0,\n",
+       "  15.384615384615385,\n",
+       "  12.5,\n",
+       "  0.0,\n",
+       "  11.76470588235294,\n",
+       "  5.555555555555555,\n",
+       "  11.11111111111111,\n",
+       "  10.0,\n",
+       "  7.6923076923076925,\n",
+       "  6.666666666666667,\n",
+       "  5.555555555555555,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0],\n",
+       " [33.33333333333333,\n",
+       "  30.0,\n",
+       "  17.391304347826086,\n",
+       "  6.25,\n",
+       "  36.36363636363637,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  18.75,\n",
+       "  25.0,\n",
+       "  0.0,\n",
+       "  11.11111111111111,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  6.666666666666667,\n",
+       "  5.555555555555555,\n",
+       "  10.0,\n",
+       "  37.5,\n",
+       "  11.11111111111111,\n",
+       "  9.090909090909092,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0],\n",
+       " [0.0,\n",
+       "  30.0,\n",
+       "  17.391304347826086,\n",
+       "  12.5,\n",
+       "  27.27272727272727,\n",
+       "  16.666666666666664,\n",
+       "  7.6923076923076925,\n",
+       "  25.0,\n",
+       "  25.0,\n",
+       "  17.647058823529413,\n",
+       "  22.22222222222222,\n",
+       "  0.0,\n",
+       "  20.0,\n",
+       "  30.76923076923077,\n",
+       "  6.666666666666667,\n",
+       "  5.555555555555555,\n",
+       "  15.0,\n",
+       "  12.5,\n",
+       "  33.33333333333333,\n",
+       "  18.181818181818183,\n",
+       "  28.57142857142857,\n",
+       "  28.57142857142857,\n",
+       "  20.0,\n",
+       "  14.285714285714285,\n",
+       "  12.5,\n",
+       "  7.142857142857142,\n",
+       "  6.666666666666667,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.0],\n",
+       " [0.0,\n",
+       "  0.0,\n",
+       "  21.73913043478261,\n",
+       "  31.25,\n",
+       "  18.181818181818183,\n",
+       "  50.0,\n",
+       "  38.46153846153847,\n",
+       "  25.0,\n",
+       "  0.0,\n",
+       "  17.647058823529413,\n",
+       "  33.33333333333333,\n",
+       "  33.33333333333333,\n",
+       "  40.0,\n",
+       "  30.76923076923077,\n",
+       "  26.666666666666668,\n",
+       "  44.44444444444444,\n",
+       "  50.0,\n",
+       "  25.0,\n",
+       "  55.55555555555556,\n",
+       "  27.27272727272727,\n",
+       "  28.57142857142857,\n",
+       "  14.285714285714285,\n",
+       "  20.0,\n",
+       "  14.285714285714285,\n",
+       "  50.0,\n",
+       "  7.142857142857142,\n",
+       "  26.666666666666668,\n",
+       "  75.0,\n",
+       "  44.44444444444444,\n",
+       "  42.857142857142854,\n",
+       "  37.5,\n",
+       "  33.33333333333333,\n",
+       "  28.57142857142857,\n",
+       "  23.076923076923077,\n",
+       "  11.11111111111111],\n",
+       " [0.0,\n",
+       "  0.0,\n",
+       "  8.695652173913043,\n",
+       "  25.0,\n",
+       "  0.0,\n",
+       "  16.666666666666664,\n",
+       "  38.46153846153847,\n",
+       "  18.75,\n",
+       "  37.5,\n",
+       "  52.94117647058824,\n",
+       "  22.22222222222222,\n",
+       "  55.55555555555556,\n",
+       "  30.0,\n",
+       "  30.76923076923077,\n",
+       "  53.333333333333336,\n",
+       "  38.88888888888889,\n",
+       "  20.0,\n",
+       "  25.0,\n",
+       "  0.0,\n",
+       "  45.45454545454545,\n",
+       "  42.857142857142854,\n",
+       "  57.14285714285714,\n",
+       "  60.0,\n",
+       "  71.42857142857143,\n",
+       "  37.5,\n",
+       "  85.71428571428571,\n",
+       "  66.66666666666666,\n",
+       "  25.0,\n",
+       "  55.55555555555556,\n",
+       "  57.14285714285714,\n",
+       "  62.5,\n",
+       "  66.66666666666666,\n",
+       "  71.42857142857143,\n",
+       "  76.92307692307693,\n",
+       "  88.88888888888889]]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[v[i] for i in range(1, 7) for v in d]\n"
+    "[[v[i] for v in d] for i in range(1, 7)]\n"
    ]
   },
   {
